Fix unwanted whitespace to right of page nav
This is a funny one. The glyph here is causing the browser to add
additional whitespace on the right, even though you can't see it. When
the glyph is rotated 180 degrees, the overflow was reversed so the blank
space didn't appear.

Just hide it.

Fixes: https://github.com/wincent/masochist/issues/39

--- a/app/src/client/components/Nav.css
+++ b/app/src/client/components/Nav.css
@@ -56,6 +56,7 @@ nav li {
   mask-position: center;
   mask-repeat: no-repeat;
   mask-size: 60%;
+  overflow: hidden;
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0);
   padding: 1rem 0;
